# OpenGLLinux

./: .gitignore  CMakeLists.txt
src/: Camera.h  Shader.h  fragmentShaderSrc.glsl  main.cpp  vertexShaderSrc.glsl
